helm-charts/manifests/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flask-webapp-ingress
  namespace: app
spec:
  ingressClassName: external-nginx
  defaultBackend:
    service:
      name: flaskapp
      port:
        number: 5000
  rules:
  - host: webapp.gorgias.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: flaskapp
            port:
              number: 5000
